# cs5756-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: collect_demonstrations.py  collect_demos.py  compare_bc_warm_zero.py  eval.py  evaluate.py  hello_battle.py  plot_week3.py  plot_winrate.py  reval_heuristic.py  run_expert.py  train_bc.py  train_rl.py  week3_sweep.py
src/: __init__.py
src/agents/: __init__.py  expert_bot.py  policy_network.py  ppo_agent.py
src/environment/: __init__.py  action_space.py  battle_env.py  obs_encoder.py
src/pokemon_rl/: __init__.py  constants.py  rewards.py
src/pokemon_rl/agents/: __init__.py
src/pokemon_rl/logging/: __init__.py  jsonl.py
src/pokemon_rl/models/: __init__.py  policy.py
src/pokemon_rl/representations/: __init__.py  actions.py  observations.py
src/pokemon_rl/rl/: on_policy_player.py  random_legal_player.py
src/pokemon_rl/utils/: config.py  run_metadata.py
src/training/: __init__.py  bc_trainer.py  rl_trainer.py
src/utils/: __init__.py  battle_logger.py
tests/: test_action_space.py  test_battle_logger.py  test_bc_trainer.py  test_expert_bot.py  test_obs_encoder.py  test_policy_network.py  test_rl_trainer.py
