[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cs5756-pokemon-rl"
version = "0.1.0"
description = "BC + RL agents for Pokémon Showdown via poke-env"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "poke-env>=0.10.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.14.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
where = ["src"]
